adds countries (#70)
* adds country table

* adds country seed function

* adds country controller and route

* adds country service on client

* adds api documentation
