# src/server/shared/country.ts
@@ -1,0 +1,5 @@
+export class Country {
+    public id: number;
+    public name: string;
+    public priority: boolean;
+}
